--- a/index.html
+++ b/index.html
@@ -24,5 +24,18 @@
         <h1>Thoughts and words</h1>
     </div>
 
+    
+    <section>
+    <img src="img/blog.svg" class="blog-img">
+    <div>
+            <p><strong>Category </strong>November 22, 2021</p>
+            <h2>Pitch termsheet backing validation focus release.</h2>
+            <div class="pfp"> <img src="img/pfp.png">
+            <p>Chandler Bing</p>
+    </div>
+    </section>
+    <hr>
+
+
 
 
