latest news section

--- a/index.html
+++ b/index.html
@@ -37,5 +37,60 @@
     <hr>
 
 
+    <div class="latest-news">
+        <h3>Latest news</h3>
+        <div class="news">
+            <div> <img src="img/innerdiv.png">
+                <p><strong>Category </strong>November 22, 2021</p>
+                <h6 class="innerdiv-p">Pitch termsheet backing validation focus release.</h6>
+                <div class="pfp"> <img src="img/pfp.png">
+                    <p>Chandler Bing</p>
+                </div>
+            </div>
+
+            <div class="innerdiv2"> <img src="img/innerdiv2.png">
+                <p><strong>Category </strong>November 22, 2021</p>
+                <h6>Seed round direct mailing non-disclosure agreement graphical user interface rockstar.</h6>
+                <div class="pfp"> <img src="img/pfp2.svg">
+                    <p>Rachel Green</p>
+                </div>
+            </div>
+
+            <div> <img src="img/innerdiv3.png">
+                <p><strong>Category </strong>November 22, 2021</p>
+                <h6>Beta prototype sales iPad gen-z marketing network effects value proposition</h6>
+                <div class="pfp"> <img src="img/pfp3.svg">
+                    <p>Monica Geller</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="news">
+            <div> <img src="img/innerdiv4.png">
+                <p><strong>Category </strong>November 22, 2021</p>
+                <h6 class="innerdiv-p">Pitch termsheet backing validation focus release.</h6>
+                <div class="pfp"> <img src="img/pfp.png">
+                    <p>Chandler Bing</p>
+                </div>
+            </div>
+
+            <div class="innerdiv2"> <img src="img/innerdiv5.png">
+                <p><strong>Category </strong>November 22, 2021</p>
+                <h6>Seed round direct mailing non-disclosure agreement graphical user interface rockstar.</h6>
+                <div class="pfp"> <img src="img/pfp2.svg">
+                    <p>Rachel Green</p>
+                </div>
+            </div>
+
+            <div> <img src="img/innerdiv6.png">
+                <p><strong>Category </strong>November 22, 2021</p>
+                <h6>Beta prototype sales iPad gen-z marketing network effects value proposition</h6>
+                <div class="pfp"> <img src="img/pfp3.svg">
+                    <p>Monica Geller</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
