email button section

--- a/index.html
+++ b/index.html
@@ -95,4 +95,13 @@
 
     <div class="load-btn"><button>Load more</button></div>
 
+    
+ 
+<div class="bg-img">
+    <div class="button-section"> 
+      <div class="heading-sec">  <h4>An enterprise template to ramp up your company website</h4>
+        <div class="emailbtn"><input class="email" type ="email" placeholder="Your email address" required name="email" id="email">
+        <button class="startbtn">Start now</button></div></div>
+    </div>
+    </div>
 
