--- a/index.html
+++ b/index.html
@@ -94,3 +94,27 @@
     </div>
 
 
+
+    <footer>
+        <div>
+        <img src="img/logo.svg"> 
+        <p>Social media validation business model canvas graphical user interface launch party creative facebook iPad twitter.</p>
+        <p class="reserved"> All rights reserved.</p>
+        </div>
+                <div class="list-section">
+               <div class="list1"><li class="list-heading">Landings</li>
+                    <li>Home</li>
+                    <li> Products</li>
+                    <li>Services</li> </div>
+               <div class="list2"><li class="list-heading">Company</li>
+                    <li>Home</li>
+                    <li class="button"> Careers <button>Hiring!</button></li>
+                    <li>Services</li></div> 
+                <div class="list3"><li class="list-heading">Resources</li>
+                    <li>Blog </li>
+                    <li> Products</li>
+                    <li>Services</li></div> 
+                </div>
+        </footer>
+        
+        
